tests/snapshots/yaml_suite_snapshots__yaml_suite_T833_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Flow mapping missing a separating comma
  tags: error flow mapping
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :foo\n"
  yaml: "---\n{\n foo: 1\n bar: 2 }\n"
