tests/snapshots/yaml_suite_snapshots__yaml_suite_TD5N_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid scalar after sequence
  from: "@perlpunk"
  tags: error sequence scalar
  fail: true
  yaml: "- item1\n- item2\ninvalid\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL :item1\n   =VAL :item2\n"
