tests/snapshots/yaml_suite_snapshots__yaml_suite_TE2A_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 8.16. Block Mappings
  from: "http://www.yaml.org/spec/1.2/spec.html#id2798147"
  tags: spec mapping
  yaml: "block mapping:\n key: value\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :block mapping\n   +MAP\n    =VAL :key\n    =VAL :value\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"block mapping\": {\n    \"key\": \"value\"\n  }\n}\n"
  dump: "block mapping:\n  key: value\n"
