tests/snapshots/yaml_suite_snapshots__yaml_suite_TE2A_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "block mapping:\n  key: value\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2798147"
  json: "{\n  \"block mapping\": {\n    \"key\": \"value\"\n  }\n}\n"
  name: Spec Example 8.16. Block Mappings
  tags: spec mapping
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :block mapping\n   +MAP\n    =VAL :key\n    =VAL :value\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  yaml: "block mapping:\n key: value\n"
