tests/snapshots/yaml_suite_snapshots__yaml_suite_TL85_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.8. Flow Folding
  from: "http://www.yaml.org/spec/1.2/spec.html#id2779950"
  tags: double spec whitespace scalar upto-1.2
  yaml: "\"\n  foo␣\n␣\n  —» bar\n\n  baz\n\"\n"
  tree: "+STR\n +DOC\n  =VAL \" foo\\nbar\\nbaz␣\n -DOC\n-STR\n"
  json: "\" foo\\nbar\\nbaz \"\n"
  dump: "\" foo\\nbar\\nbaz \"\n"
